Add video, header, and link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Discover hidden places in the world around you</p>
-    <a href="#">Discover Excursion (Coming Soon!)</a>
+    <p class="header">Discover hidden places in the world around you</p>
+    <a href="#" class="link">Discover Excursion (Coming Soon!)</a>
+    <br>
+    <video src="./resources/excursion (1).mp4" type="video/mp4" autoplay muted loop></video>
+    <br>
+    <p class="header">Your personal travel guide</p>
 </body>
 </html>
