Add text class with excursion message

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/css/style.css">
-    <title>Document</title>
+    <title>Excursion</title>
 </head>
 <body>
     <p class="header">Discover hidden places in the world around you</p>
@@ -14,5 +14,6 @@
     <video src="./resources/excursion (1).mp4" type="video/mp4" autoplay muted loop></video>
     <br>
     <p class="header">Your personal travel guide</p>
+    <p class="text"> Excursion remembers place you like, and recommends new points of interest around you. </p>
 </body>
 </html>
