--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <video src="./resources/excursion (1).mp4" type="video/mp4" autoplay muted loop></video>
     <br>
     <p class="header">Your personal travel guide</p>
-    <p class="text"> Excursion remembers place you like, and recommends new points of interest around you. </p>
+    <p class="text">Excursion remembers place you like, and recommends new points of interest around you.</p>
+    <img src="./resources/camp.webp" alt="Camping tent">
+    <br>
+    <img src="./resources/phone.webp" alt="Phone icon" class="phone">
 </body>
 </html>
