Add link and copyright

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     <img src="./resources/camp.webp" alt="Camping tent">
     <br>
     <img src="./resources/phone.webp" alt="Phone icon" class="phone">
+    <br>
+    <a href="#" class="link">Discover Excursion (Coming Soon!)</a>
+    <p class="text" id="copyright">© Excursion</p>
 </body>
 </html>
